--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                     <ul class="footer-contact">
                         <li><i class="fas fa-map-marker-alt"></i> 123 Jewelry Lane, New York, NY 10001</li>
                         <li><i class="fas fa-phone"></i> +1 (888) 123-4567</li>
-                        <li><i class="fas fa-envelope"></i> info@xumeijewelry.com</li>
+                        <li><i class="fas fa-envelope"></i> evaHuang@xumeijewelry.com/li>
                         <li><i class="fas fa-clock"></i> Mon-Fri: 9AM-6PM, Sat: 10AM-4PM</li>
                     </ul>
                 </div>
