--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="top-info-bar">
         <div class="container">
             <div class="contact-info">
-                <span><i class="fas fa-phone"></i> +1 (888) 123-4567</span>
-                <span><i class="fas fa-envelope"></i> info@xumeijewelry.com</span>
+                <span><i class="fas fa-phone"></i> ++86 172 7967 7638</span>
+                <span><i class="fas fa-envelope"></i> evaHuang@xumeijewelry.com</span>
             </div>
             <div class="social-icons">
                 <a href="index.html#"><i class="fab fa-instagram"></i></a>
@@ -529,7 +529,7 @@
                     <h3>Contact Us</h3>
                     <ul class="footer-contact">
                         <li><i class="fas fa-map-marker-alt"></i> 123 Jewelry Lane, New York, NY 10001</li>
-                        <li><i class="fas fa-phone"></i> +1 (888) 123-4567</li>
+                        <li><i class="fas fa-phone"></i> +86 172 7967 7638</li>
                         <li><i class="fas fa-envelope"></i> evaHuang@xumeijewelry.com/li>
                         <li><i class="fas fa-clock"></i> Mon-Fri: 9AM-6PM, Sat: 10AM-4PM</li>
                     </ul>
